--- a/_pages/01-page-one.html
+++ b/_pages/01-page-one.html
@@ -1,4 +1,17 @@
 ---
 ---
-
-<p>This is my first pageasdfasdf</p>
+<div class="colliers-cover-page colliers-full-page" style="background-image: url('https://mytinder.s3.amazonaws.com/assets/medias/594648_original.jpg?1517414882');">
+  <section class="colliers-box--white">
+    <h1>Valuation &amp; Advisory Services</h1>
+    <p>Capabilities &amp; Proposal Prepared for:</p>
+    <img src="https://fillmurray.com/200/75" alt="" class="colliers-cover-page--client-logo">
+    <div class="colliers-cover-page--company-details">
+      <p class="colliers-cover-page--company-name">ABC Company Inc.</p> 
+      <p class="colliers-cover-page--address">123 Fake Street, Suite 900</p>
+      <p class="colliers-cover-page--location">City, Province Postal Code</p>
+    </div>
+    <p class="colliers-font-shrink"><em>Prepared by:</em></p>
+    <p class="colliers-mar-b-none"><strong>Colliers International</strong></p>
+    <p class="colliers-font-shrink">Valuation &amp; Advisory Services</p>
+  </section>
+</div>
